fixed img on mobile

--- a/sass/modules/_static.scss
+++ b/sass/modules/_static.scss
@@ -122,7 +122,6 @@ footer {
   }
   .potrait {
     position: static;
-    max-width: 50%;
   }
 
   h1 {
